// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper Text should render danger text with danger icon if dange variant is specified 1`] = `
<scale-helper-text variant="danger">
  <template shadowrootmode="open">
    <div class="helper-text helper-text--danger" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-error decorative=""></scale-icon-alert-error>
    </div>
  </template>
  danger
</scale-helper-text>
`;

exports[`Helper Text should render informational helper text with info icon if informational variant is specified 1`] = `
<scale-helper-text variant="informational">
  <template shadowrootmode="open">
    <div class="helper-text helper-text--informational" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-information decorative=""></scale-icon-alert-information>
    </div>
  </template>
  informational
</scale-helper-text>
`;

exports[`Helper Text should render informational helper text with info icon if no variant is specified 1`] = `
<scale-helper-text>
  <template shadowrootmode="open">
    <div class="helper-text helper-text--informational" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-information decorative=""></scale-icon-alert-information>
    </div>
  </template>
  informational
</scale-helper-text>
`;

exports[`Helper Text should render neutral text without icon if neutral variant is specified 1`] = `
<scale-helper-text variant="neutral">
  <template shadowrootmode="open">
    <div class="helper-text helper-text--neutral" part="base">
      <span part="text">
        <slot></slot>
      </span>
    </div>
  </template>
  neutral
</scale-helper-text>
`;

exports[`Helper Text should render success text with success icon if success variant is specified 1`] = `
<scale-helper-text variant="success">
  <template shadowrootmode="open">
    <div class="helper-text helper-text--success" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-action-success decorative=""></scale-icon-action-success>
    </div>
  </template>
  success
</scale-helper-text>
`;

exports[`Helper Text should render warning text with warning icon if warning variant is specified 1`] = `
<scale-helper-text variant="warning">
  <template shadowrootmode="open">
    <div class="helper-text helper-text--warning" part="base">
      <span part="text">
        <slot></slot>
      </span>
      <scale-icon-alert-information decorative=""></scale-icon-alert-information>
    </div>
  </template>
  warning
</scale-helper-text>
`;
